After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770071 - rhythmbox crashes while updating metadata for file stored in read only filesystem
rhythmbox crashes while updating metadata for file stored in read only filesy...
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
3.4
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-18 07:45 UTC by gnome.vrb
Modified: 2016-08-18 10:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description gnome.vrb 2016-08-18 07:45:24 UTC
Core was generated by `rhythmbox'.
Program terminated with signal SIGSEGV, Segmentation fault.
  • #0 rhythmdb_entry_type_fetch_metadata
    at rhythmdb-entry-type.c line 240
  • #0 rhythmdb_entry_type_fetch_metadata
    at rhythmdb-entry-type.c line 240
  • #1 action_thread_main
    at rhythmdb.c line 2816
  • #2 action_thread_main
    at rhythmdb.c line 3046
  • #3 g_thread_proxy
    at ././glib/gthread.c line 780
  • #4 start_thread
    at pthread_create.c line 333
  • #5 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 109

Comment 1 gnome.vrb 2016-08-18 07:46:13 UTC
Rhythmbox should not crash. Partition / filesystem details:

root@unstable:/# mount | grep sdb2
/dev/sdb2 on /tmp/sdb2 type vfat (ro,relatime,fmask=0022,dmask=0022,codepage=437,iocharset=utf8,shortname=mixed,errors=remount-ro)
Comment 2 Jonathan Matthew 2016-08-18 10:06:58 UTC
fixed in commit 985e247