rhythmdb: specify entry type when rereading metadata

https://bugzilla.gnome.org/show_bug.cgi?id=770071